deploy/http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
  labels:
    app: http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
      - name: http
        image: ghcr.io/tyholling/golang-http-server:latest-arm64
        imagePullPolicy: Always
        ports:
        - containerPort: 80
