deploy/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  selector:
    app: http
  ports:
  - port: 80
    name: http
